Fix some mobile layout issues

--- a/src/css/areas/body.scss
+++ b/src/css/areas/body.scss
@@ -46,7 +46,13 @@
             ". content ."
             ". footer .";
 
-        @include phone() {
+        @include landscape-phone() {
+            grid-template-areas:
+                "content ."
+                "footer .";
+        }
+
+        @include portrait-phone() {
             grid-template-areas:
                 "content ."
                 "footer .";
