--- a/src/css/blocks/gallery.scss
+++ b/src/css/blocks/gallery.scss
@@ -26,6 +26,7 @@
             right: 50%;
             margin-left: -50vw;
             margin-right: -50vw;
+            width: 100vw;
         }
 
         a {
